# qtmecabon

./: .gitignore  LICENSE  README.md  qtMeCabon.vcxproj
qtMeCabon/: CMakeLists.txt  CMakePresets.json  PdfRdTxt.h  RdPdfTkn.cpp  RdPdfTkn.h  about.cpp  about.h  about.ui  buildsysdic.cpp  buildsysdic.h  cmultilang.cpp  cmultilang.h  corpasdialog.cpp  corpasdialog.h  corpasdialog.ui  corpusedit.cpp  corpusedit.h  csvdictionarysarchdialog.cpp  csvdictionarysarchdialog.h  csvdictionarysarchdialog.ui  exTextEdit.cpp  exTextEdit.h  extdial.cpp  extdial.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mecabdll.h  mecabif.cpp  mecabif.h  messagebuff.cpp  messagebuff.h  pdf2txt.cpp  pdfRdTxt.cpp  playlinesapi.cpp  playlinesapi.h  playlinevvoxcore.cpp  playlinevvoxcore.h  portaudio_x64.lib  (+40 more)
qtMeCabon/portaudio/include/: dsound.lib
work/final/: Adj.csv  Adnominal.csv  Adverb.csv  Auxil.csv  Conjunction.csv  Filler.csv  HonSura.csv  Interjection.csv  Noun.adjv.csv  Noun.adverbal.csv  Noun.demonst.csv  Noun.nai.csv  Noun.name.csv  Noun.number.csv  Noun.org.csv  Noun.others.csv  Noun.proper.csv  Noun.verbal.csv  Others.csv  Postp-col.csv  Postp.csv  Prefix.csv  Suffix.csv  Symbol.csv  _left-id.def  addWord.csv  right-id.def  unk.def  unk.dic
work/seed/: Adj.csv  Adnominal.csv  Adverb.csv  Auxil.csv  Conjunction.csv  Filler.csv  HonSura.csv  Interjection.csv  Noun.adjv.csv  Noun.adverbal.csv  Noun.demonst.csv  Noun.nai.csv  Noun.name.csv  Noun.number.csv  Noun.org.csv  Noun.others.csv  Noun.proper.csv  Noun.verbal.csv  Others.csv  Postp-col.csv  Postp.csv  Prefix.csv  Suffix.csv  Symbol.csv  addWord.csv  corpus
